# my_librarys

./: README.md
mylibrary/: CMakeLists.txt
mylibrary/src/: my_library.cpp
new_project/: CMakeLists.txt
new_project/include/: my_library.h
new_project/src/: app.cpp
